AF-01: change color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid wrapper">
       <div class="row">
         <div class="header">
           Alphabet
