game levels added upto level 3

--- a/index.html
+++ b/index.html
@@ -22,47 +22,12 @@
               <div class="intro-box" id="intro">
                 <button type="button" name="button" id="button"> Click to Play</button>
               </div>
+              <div class="text-center">Your Score:<span id="score"> 0</span></div>
               <div class="question-box" id="question"></div>
               <div class="filter" id="filter">
-							<div class="col-sm-2 col-sm-offset-0 hidden-xs hidden">
-								<div class="main" id="mainadd">
-									A
-								</div>
-							</div>
 								<div class="col-sm-8">
-									<div class="boxes">
-										<li onclick="clickText(this.id)" id="A">A</li>
-										<li onclick="clickText(this.id)" id="B">B</li>
-										<li onclick="clickText(this.id)" id="C">C</li>
-										<li onclick="clickText(this.id)" id="D">D</li>
-										<li onclick="clickText(this.id)" id="E">E</li>
-										<li onclick="clickText(this.id)" id="F">F</li>
-										<li onclick="clickText(this.id)" id="G">G</li>
-										<li onclick="clickText(this.id)" id="H">H</li>
-										<li onclick="clickText(this.id)" id="I">I</li>
-										<li onclick="clickText(this.id)" id="J">J</li>
-										<li onclick="clickText(this.id)" id="K">K</li>
-									</div>
-									<div class="boxes">
-										<li onclick="clickText(this.id)" id="L">L</li>
-										<li onclick="clickText(this.id)" id="M">M</li>
-										<li onclick="clickText(this.id)" id="N">N</li>
-										<li onclick="clickText(this.id)" id="O">O</li>
-										<li onclick="clickText(this.id)" id="P">P</li>
-										<li onclick="clickText(this.id)" id="Q">Q</li>
-										<li onclick="clickText(this.id)" id="R">R</li>
-										<li onclick="clickText(this.id)" id="S">S</li>
-										<li onclick="clickText(this.id)" id="T">T</li>
-										<li onclick="clickText(this.id)" id="U">U</li>
-										<li onclick="clickText(this.id)" id="V">V</li>
-									</div>
-									<div class="boxes">
-										<li onclick="clickText(this.id)" id="W">W</li>
-										<li onclick="clickText(this.id)" id="X">X</li>
-										<li onclick="clickText(this.id)" id="Y">Y</li>
-										<li onclick="clickText(this.id)" id="Z">Z</li>
-									</div>
-								</div>
+									<div class="boxes" id="boxed"></div>
+            		</div>
 						</div>
             </div>
           </div>
