--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
       </div>
     </div>
     <audio src="app-20.mp3"></audio>
-  </body>
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
+  </body>
 </html>
